--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="EwPtEdLJXa_n8pU8hiUygHjS-7KL1QvxZc6ufTn5zOk" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>How to Login Hushmail</title>
   <style>
